fix: fix model overflow issue and toast import issue

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -32,7 +32,7 @@ html.dark {
     background-color: theme('colors.slate.400');
   }
 }
-html {
+body {
   overflow-x: hidden;
 }
 
